# wc_simd

./: .env.name_rec.example  .gitignore  AGENTS.md  DEDUPER_SERVICE.md  DEDUPE_SERVICE.md  README.md  amplify.yml  pyproject.toml  requirements.txt  wc_simd.code-workspace
aws/: README.md  ec2_capacity_check.sh  ec2_control.py  hadoop.service  kill_vlm_embed.sh  nvidia_drivers_ec2.md  upload_to_s3.py  vlm_embed.sh
data/: data_index.md  dn_label_dedupe_training.json  iiif_manifest_schema.txt  name_rec_sample.csv
demos/bookchat/: deploy.sh
demos/bookchat/app/: Dockerfile  agent.py  app.py  config.toml  requirements.txt  retrievers.py  vectorstore.py  vectorstores.py
demos/bookchat/infrastructure/: data.tf  ecs.tf  load_balancer.tf  security_groups.tf  terraform.tf
demos/imagetalk/: README.md
demos/imagetalk/backend/: imagetalk.py  indeximages.ipynb  pyproject.toml  voice_chatting.ipynb
demos/imagetalk/backend/docker/: docker-compose.yml  run_mongodb_atlas.sh
demos/imagetalk/backend/tests/: test_audio_endpoint.py
demos/imagetalk/embed_backend/: embed.ipynb  embed.py  pyproject.toml
demos/imagetalk/frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
demos/imagetalk/frontend/app/: globals.css  layout.tsx  page.tsx
demos/timetrvlr/: next.config.ts  package.json
demos/timetrvlr/app/embed3d/: page.tsx
demos/timetrvlr/public/: .gitignore
demos/timetrvlr/scripts/: download_data.sh
demos/timetrvlr/timetrvlr_backend/: pyproject.toml
demos/timetrvlr/timetrvlr_client/: README.md  eslint.config.mjs  next.config.mjs  package.json
demos/timetrvlr/timetrvlr_infra/: .env.example  .gitignore  README.md  cdk.json  package.json  tsconfig.json
docs/: dedupe_labelling_enhanced_search_feature.md  elasticsearch_notes.md  local_hive_spark.md  ocr_text_discovery.md  open_web_ui_notes.md  vlm_embed_ae_note.md
docs/rfc-078-name-reconciliation-service.md/: README.md
notebooks/: alto_text.ipynb  alto_text_analysis.ipynb  alto_text_chunking.ipynb  alto_text_sentences.ipynb  alto_text_spellcheck.ipynb  chat_simple.ipynb  dn_label_dedupe.ipynb  dn_labels.ipynb  download_iiif_manifests.ipynb  es_denormalised.ipynb  iiif_manifest_pages.ipynb  iiif_manifests.ipynb  name_rec.ipynb  name_rec_poc.ipynb  sentence_explore.ipynb  vlm_embed.ipynb  vlm_embed_train_data.ipynb  works_labels.ipynb  works_text_analysis.ipynb  works_text_analysis_flattened.ipynb
notebooks/reference/: dedupe_example.py
scratchpads/: luckskillgame.py  vlm_embed_poc.py
scripts/: run_name_rec_embed.sh  run_qwen3embed.sh  run_qwen3embed_multi.sh  vllm-mm-embed.sh  vlm_embed_data.sh
src/wc_simd/: dedupe_service.py  deduper_service.py  dn_label_eval.py  dn_label_train_client.py  embed.py  iiif_manifests.py  index.py  llm.py  name_rec_embed.py  name_rec_run.py  utility.py  vlm_embed.py  vlm_embed_ae.py  vlm_embed_client.py  vlm_embed_train_data.py  vlm_embed_vae.py
tests/: test_embeddings.py  test_iiif_manifests.py  test_llm.py  test_search.py
(+15 files in other folders)
