[project]
name = "wc_simd"
version = "0.1.0"
description = ""
authors = [{ name = "@danniesim" }]
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-aws (>=0.2.18,<0.3.0)",
    "langgraph-supervisor (>=0.0.16,<0.0.17)",
    "langsmith (>=0.3.27,<0.4.0)",
    "langchain-community>=0.3.21,<0.4.0",
    "pydbml (>=1.2.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pymysql>=1.1.1",
    "oracledb>=3.1.0",
    "wordcloud>=1.9.4",
    "textblob>=0.19.0",
    "textstat>=0.7.5",
    "spacy==3.8.4",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "pip>=25.1.1",
    "sglang>=0.4.6.post3",
    "transformers>=4.51.3",
    "vllm>=0.8.5.post1",
    "sagemaker>=2.244.0",
    "openai>=1.78.1",
    "langchain-openai>=0.3.16",
    "symspellpy>=6.9.0",
    "pyarrow>=20.0.0",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "langdetect>=1.0.9",
    "fasttext>=0.9.3",
    "huggingface-hub>=0.31.2",
    "langchain-huggingface>=0.3.0",
    "sentence-transformers>=4.1.0",
    "instructorembedding>=1.0.1",
    "langchain-elasticsearch>=0.3.2",
    "ipywidgets>=8.1.7",
    "streamlit>=1.46.0",
    "bson>=0.5.10",
    "streamlit-cookies-manager>=0.2.0",
    "dedupe>=3.0.3",
    "flask>=3.1.1",
    "openpyxl>=3.1.5",
    "fuzzywuzzy>=0.18.0",
]

[tool.pdm.dev-dependencies]
dev = []
prod = []

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wc_simd", "wc_simd.*"]
